--- a/Makefile.Win32
+++ b/Makefile.Win32
@@ -8,15 +8,18 @@ CURL_LIBS = $(CURL_DIR)\lib\libcurl_a.lib
 CFLAGS_BASE = /D_WIN32 /DPTW32_STATIC_LIB /DPCRE_STATIC /I$(OPENSSL_DIR)\inc32 /I$(PTHREADS_DIR) /I$(PCRE_DIR) /Ox /Zi
 CFLAGS = $(CFLAGS_BASE) /GL
 LIBS = $(OPENSSL_DIR)\out32\libeay32.lib $(PTHREADS_DIR)\pthreadVC2.lib $(PCRE_DIR)\pcre.lib ws2_32.lib user32.lib advapi32.lib gdi32.lib /LTCG /DEBUG
-OBJS = vanitygen_z.obj oclvanitygen_z.obj oclengine_z.obj pattern_z.obj util_z.obj winglue.obj
+OBJS = vanitygen_z.obj oclvanitygen_z.obj oclengine_z.obj pattern_z.obj util_z.obj keyconv_z.obj winglue.obj
 
-all: vanitygen_z.exe
+all: vanitygen_z.exe keyconv_z.exe
 
 vanitygen_z.exe: vanitygen_z.obj pattern_z.obj util_z.obj winglue.obj
 	link /nologo /out:$@ $** $(LIBS)
 
 oclvanitygen_z.exe: oclvanitygen_z.obj oclengine_z.obj pattern_z.obj util_z.obj winglue.obj
 	link /nologo /out:$@ $** $(LIBS) $(OPENCL_LIBS)
+
+keyconv_z.exe: keyconv_z.obj util_z.obj winglue.obj
+	link /nologo /out:$@ $** $(LIBS)
 
 .c.obj:
 	@$(CC) /nologo $(CFLAGS) /c /Tp$< /Fo$@
@@ -29,4 +32,4 @@ oclvanitygen_z.obj: oclvanitygen_z.c
 
 
 clean:
-	del vanitygen_z.exe oclvanitygen_z.exe $(OBJS)
+	del vanitygen_z.exe oclvanitygen_z.exe keyconv_z.exe $(OBJS)
